--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
